Closed Bug 1452041 Opened 6 years ago Closed 6 years ago

Intermittent application crashed [@ nsClipboard::HasDataMatchingFlavors]

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- fixed
firefox61 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: stransky)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Filed by: apavel [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=172196277&repo=mozilla-central

https://queue.taskcluster.net/v1/task/XqsPXq3qSpOPc65jerHZEA/runs/0/artifacts/public/logs/live_backing.log

16:01:36     INFO -  PID 29981 | ###!!! [Parent][MessageChannel] Error: (msgtype=0x16007F,name=PBrowser::Msg_Destroy) Closed channel: cannot send/recv
16:01:36     INFO -  PID 29981 |
16:01:37     INFO -  TEST-INFO | 29981: exit 0
16:01:37     INFO -  mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/Bk-Q-uLuQwGKw39fBkwDxQ/artifacts/public/build/target.crashreporter-symbols.zip
16:01:41     INFO -  mozcrash Copy/paste: /home/cltbld/workspace/build/linux64-minidump_stackwalk /tmp/tmpKv6EOg/profile/minidumps/068631e6-91ec-028d-efc3-1147dfdf2321.dmp /tmp/tmpAe8yyh
16:01:45     INFO -  mozcrash Saved minidump as /home/cltbld/workspace/build/blobber_upload_dir/068631e6-91ec-028d-efc3-1147dfdf2321.dmp
16:01:45     INFO -  mozcrash Saved app info as /home/cltbld/workspace/build/blobber_upload_dir/068631e6-91ec-028d-efc3-1147dfdf2321.extra
16:01:45     INFO -  PROCESS-CRASH | tp5o | application crashed [@ nsClipboard::HasDataMatchingFlavors]
16:01:45     INFO -  Crash dump filename: /tmp/tmpKv6EOg/profile/minidumps/068631e6-91ec-028d-efc3-1147dfdf2321.dmp
16:01:45     INFO -  Operating system: Linux
16:01:45     INFO -                    0.0.0 Linux 4.4.0-66-generic #87-Ubuntu SMP Fri Mar 3 15:29:05 UTC 2017 x86_64
16:01:45     INFO -  CPU: amd64
16:01:45     INFO -       family 6 model 94 stepping 3
16:01:45     INFO -       1 CPU
16:01:45     INFO -  GPU: UNKNOWN
16:01:45     INFO -  Crash reason:  SIGSEGV
16:01:45     INFO -  Crash address: 0x0
16:01:45     INFO -  Process uptime: not available
16:01:45     INFO -  Thread 0 (crashed)
16:01:45     INFO -   0  libxul.so!nsClipboard::HasDataMatchingFlavors [nsClipboard.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 411 + 0x0]
16:01:45     INFO -      rax = 0x0000000000007fff   rdx = 0x00007f5961200020
16:01:45     INFO -      rcx = 0x0000000000000003   rbx = 0x0000000000000001
16:01:45     INFO -      rsi = 0x0000000000000000   rdi = 0x00007f5961200020
16:01:45     INFO -      rbp = 0x00007fff00166480   rsp = 0x00007fff00166430
16:01:45     INFO -       r8 = 0x0000000000000000    r9 = 0x00000000ffffffff
16:01:45     INFO -      r10 = 0x0000000000000449   r11 = 0x0000000000000000
16:01:45     INFO -      r12 = 0x00007fff001664a0   r13 = 0x00007fff001664a0
16:01:45     INFO -      r14 = 0x0000000000000000   r15 = 0x00007fff00166493
16:01:45     INFO -      rip = 0x00007f59529e8350
16:01:45     INFO -      Found by: given as instruction pointer in context
16:01:45     INFO -   1  libxul.so!mozilla::TextEditor::CanPaste [TextEditorDataTransfer.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 359 + 0x3]
16:01:45     INFO -      rbp = 0x00007fff001664e0   rsp = 0x00007fff00166490
16:01:45     INFO -      rip = 0x00007f5952a85273
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   2  libxul.so + 0x957546
16:01:45     INFO -      rbp = 0x00007fff00166510   rsp = 0x00007fff001664f0
16:01:45     INFO -      rip = 0x00007f5950a04546
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   3  libxul.so!XPCWrappedNative::CallMethod [XPCWrappedNative.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 1951 + 0x5]
16:01:45     INFO -      rbp = 0x00007fff00166740   rsp = 0x00007fff00166520
16:01:45     INFO -      rip = 0x00007f5951169dc0
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   4  libxul.so!XPC_WN_CallMethod [XPCWrappedNativeJSOps.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 911 + 0xa]
16:01:45     INFO -      rbp = 0x00007fff00166880   rsp = 0x00007fff00166750
16:01:45     INFO -      rip = 0x00007f595116f8c9
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   5  libxul.so!js::InternalCallOrConstruct [JSContext-inl.h:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 290 + 0x6]
16:01:45     INFO -      rbp = 0x00007fff00166930   rsp = 0x00007fff00166890
16:01:45     INFO -      rip = 0x00007f5953bd67a2
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   6  libxul.so!Interpret [Interpreter.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 522 + 0x12]
16:01:45     INFO -      rbp = 0x00007fff00166e40   rsp = 0x00007fff00166940
16:01:45     INFO -      rip = 0x00007f5953bd1a55
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   7  libxul.so!js::RunScript [Interpreter.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 417 + 0xb]
16:01:45     INFO -      rbp = 0x00007fff00166f30   rsp = 0x00007fff00166e50
16:01:45     INFO -      rip = 0x00007f5953bd63b6
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   8  libxul.so!js::InternalCallOrConstruct [Interpreter.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 489 + 0xb]
16:01:45     INFO -      rbp = 0x00007fff00166fe0   rsp = 0x00007fff00166f40
16:01:45     INFO -      rip = 0x00007f5953bd6a6b
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -   9  libxul.so!js::Call [Interpreter.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 535 + 0x5]
16:01:45     INFO -      rbp = 0x00007fff00167000   rsp = 0x00007fff00166ff0
16:01:45     INFO -      rip = 0x00007f5953bd6dd9
16:01:45     INFO -      Found by: previous frame's frame pointer
16:01:45     INFO -  10  libxul.so!JS_CallFunctionValue [jsapi.cpp:7b40283bf1c7a2a3e6a8a5d00156a2f506ff465b : 2944 + 0x5]
16:01:45     INFO -      rbp = 0x00007fff00167170   rsp = 0x00007fff00167010
16:01:45     INFO -      rip = 0x00007f5953ec0e72
16:01:45     INFO -      Found by: previous frame's frame pointer

16:01:45     INFO -  TEST-UNEXPECTED-ERROR | tp5o | Found crashes after test run, terminating test
16:01:45    ERROR -  Traceback (most recent call last):
16:01:45     INFO -    File "/home/cltbld/workspace/build/tests/talos/talos/run_tests.py", line 296, in run_tests
16:01:45     INFO -      talos_results.add(mytest.runTest(browser_config, test))
16:01:45     INFO -    File "/home/cltbld/workspace/build/tests/talos/talos/ttest.py", line 63, in runTest
16:01:45     INFO -      return self._runTest(browser_config, test_config, setup)
16:01:45     INFO -    File "/home/cltbld/workspace/build/tests/talos/talos/ttest.py", line 277, in _runTest
16:01:45     INFO -      test_config['name'])
16:01:45     INFO -    File "/home/cltbld/workspace/build/tests/talos/talos/ttest.py", line 47, in check_for_crashes
16:01:45     INFO -      raise TalosCrash('Found crashes after test run, terminating test')
16:01:45     INFO -  TalosCrash: Found crashes after test run, terminating test
16:01:45     INFO -  TEST-INFO took 637438ms
16:01:45     INFO -  SUITE-END | took 637s
16:01:45    ERROR - Return code: 2
16:01:45  WARNING - setting return code to 2
16:01:45    ERROR - # TBPL FAILURE #
Component: Talos → Editor
Priority: P5 → --
Product: Testing → Core
Summary: Intermittent PROCESS-CRASH | tp5o | application crashed [@ nsClipboard::HasDataMatchingFlavors] → Intermittent application crashed [@ nsClipboard::HasDataMatchingFlavors]
Version: Version 3 → unspecified
This started after bug 1447925 landed. Martin, can you take a look at this, please?
Blocks: 1447925
Flags: needinfo?(stransky)
Sure.
Flags: needinfo?(stransky)
Assignee: nobody → stransky
Bug 1451899 seems to have significant data at log:

ref.xul
[task 2018-04-04T23:29:22.376Z] 23:29:22     INFO - REFTEST TEST-LOAD | file:///builds/worker/workspace/build/tests/reftest/tests/layout/reftests/forms/placeholder/placeholder-19.xul | 16 / 21 (76%)
[task 2018-04-04T23:29:22.952Z] 23:29:22     INFO - [Parent 6352, Main Thread] WARNING: gtk_targets_include_text: assertion 'targets != NULL || n_targets == 0' failed: 'glib warning', file /builds/worker/workspace/build/src/toolkit/xre/nsSigHandlers.cpp, line 141
[task 2018-04-04T23:29:22.954Z] 23:29:22     INFO - (firefox:6352): Gtk-CRITICAL **: gtk_targets_include_text: assertion 'targets != NULL || n_targets == 0'
Comment on attachment 8966167 [details]
Bug 1452041 - nsClipboard::HasDataMatchingFlavors(): return immediately when there's no clipboard content,

https://reviewboard.mozilla.org/r/234902/#review240548
Attachment #8966167 - Flags: review?(jhorak) → review+
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/4b841d1c7ec0
nsClipboard::HasDataMatchingFlavors(): return immediately when there's no clipboard content, r=jhorak
https://hg.mozilla.org/mozilla-central/rev/4b841d1c7ec0
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
To be clear this bug was introduced by Bug 1417874 but Bug 1447925 makes it more visible. I say FF 60 is affected and I'll ask for uplift here.
Component: Editor → Widget: Gtk
Comment on attachment 8966167 [details]
Bug 1452041 - nsClipboard::HasDataMatchingFlavors(): return immediately when there's no clipboard content,

Approval Request Comment
[Feature/Bug causing the regression]: Bug 1417874
[User impact if declined]: Users may see a crash when there's no clipboard content available.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: Bug 1447925
[Is the change risky?]: no
[Why is the change risky/not risky?]: It's a small change, early return when there's no clipboard content.
[String changes made/needed]: none
Attachment #8966167 - Flags: approval-mozilla-beta?
Comment on attachment 8966167 [details]
Bug 1452041 - nsClipboard::HasDataMatchingFlavors(): return immediately when there's no clipboard content,

crash fix which should go along with bug 1447925; approved for 60.0b13
Attachment #8966167 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: