Bug 1452041 - nsClipboard::HasDataMatchingFlavors(): return immediately when there's no clipboard content, r=jhorak

MozReview-Commit-ID: CTz0tRr3p57